--- a/ss13_security/exercise/build.gradle
+++ b/ss13_security/exercise/build.gradle
@@ -18,10 +18,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly 'mysql:mysql-connector-java'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'}
 
 tasks.named('test') {
     useJUnitPlatform()
