--- a/ss13_security/exercise/src/main/resources/application.properties
+++ b/ss13_security/exercise/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sss7_blog?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ss13_blog_security?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
